--- a/css/style.css
+++ b/css/style.css
@@ -387,7 +387,10 @@ mark,
 
 .img-fluid {
   max-width: 100%;
-  height: auto; }
+  height: auto;
+  margin-top: 10px;
+   margin-bottom: 10px;
+ }
 
 .img-thumbnail {
   padding: 0.25rem;
